@@ -43,6 +43,7 @@
       "test" : {
          "requires" : {
             "Cwd" : "0",
+            "Encode" : "0",
             "Exporter" : "0",
             "File::Basename" : "0",
             "File::Path" : "2.07",
