@@ -4,6 +4,7 @@ author:
   - 'Sven Kirmess <sven.kirmess@kzone.ch>'
 build_requires:
   Cwd: '0'
+  Encode: '0'
   Exporter: '0'
   File::Basename: '0'
   File::Path: '2.07'
