@@ -42,26 +42,31 @@ note('new()');
     ok( $obj->{_fatal}, 'fatal is true' );
     is_deeply( $obj->{_git}, ['git'], 'git is configured to git' );
     ok( !exists $obj->{_dir}, 'dir is not set' );
+    is( $obj->{_mode},  'utf8', 'mode is set to utf8' );
+    is( $obj->{_split}, 1,      'split is set to 1' );
 }
 
-note(q{new( { fatal => 0, git => 'my-git' } )});
+note(q{new( { fatal => 0, git => 'my-git', mode => ':raw', split => 0 } )});
 {
-    my $obj = Git::Background->new( { fatal => 0, git => 'my-git' } );
+    my $obj = Git::Background->new( { fatal => 0, git => 'my-git', mode => 'raw', split => 0 } );
     isa_ok( $obj, 'Git::Background', 'new returned object' );
 
     ok( !$obj->{_fatal}, 'fatal is false' );
     is_deeply( $obj->{_git}, ['my-git'], 'git is configured to my-git' );
     ok( !exists $obj->{_dir}, 'dir is not set' );
+    is( $obj->{_mode},  'raw', 'mode is set to raw' );
+    is( $obj->{_split}, q{},   'stdout_split is set to \'\'' );
 }
 
-note(q{new( { git => [qw(nice -19 git)] } )});
+note(q{new( { git => [qw(nice -19 git)], stdout_split => 'something true' } )});
 {
-    my $obj = Git::Background->new( { git => [qw(nice -19 git)] } );
+    my $obj = Git::Background->new( { git => [qw(nice -19 git)], split => 'something true' } );
     isa_ok( $obj, 'Git::Background', 'new returned object' );
 
     ok( $obj->{_fatal}, 'fatal is true' );
     is_deeply( $obj->{_git}, [qw(nice -19 git)], 'git is configured to nice -19 git' );
     ok( !exists $obj->{_dir}, 'dir is not set' );
+    is( $obj->{_split}, 1, 'split is set to 1' );
 }
 
 note('new($dir)');
