@@ -3,9 +3,11 @@
       "Git",
       "Proc",
       "c",
+      "cmd",
       "dir",
       "git",
       "proc",
+      "utf8",
       "xt"
    ]
 }
